<?xml version="1.0" encoding="utf-8"?>
<!--Foi adicionado o scrollView envolvendo todo conteudo, as três linhas abaixo foram buscadas do androidx e as outras três adicionadas manualmente-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MachineForm">

        <EditText
            android:id="@+id/etNomeMaq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/informe_o_nome_da_m_quina"
            android:minHeight="48dp"
            android:inputType="text"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etLinhaProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:inputType="text"
            android:hint="@string/informe_a_linha_de_produ_o"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="@+id/etNomeMaq"
            app:layout_constraintStart_toStartOf="@+id/etNomeMaq"
            app:layout_constraintTop_toBottomOf="@+id/etNomeMaq" />

        <EditText
            android:id="@+id/etHorasParadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:inputType="numberDecimal"
            android:hint="@string/informe_as_horas_de_parada"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="@+id/etNomeMaq"
            app:layout_constraintStart_toStartOf="@+id/etNomeMaq"
            app:layout_constraintTop_toBottomOf="@+id/etLinhaProd" />

        <Button
            android:id="@+id/btnSaveNewMachine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/salvar"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etHorasParadas" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>